--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@ body {
   padding: 16px;
 }
 
+/* Floating hearts background */
+.heart {
+  position: fixed;
+  bottom: -20px;
+  font-size: 18px;
+  opacity: 0.4;
+  animation: floatUp linear forwards;
+  pointer-events: none;
+}
+
+@keyframes floatUp {
+  to {
+    transform: translateY(-110vh);
+    opacity: 0;
+  }
+}
+
 #confettiCanvas {
   position: fixed;
   inset: 0;
@@ -46,6 +63,7 @@ body {
   border-radius: 22px;
   text-align: center;
   box-shadow: 0 18px 60px rgba(0,0,0,.15);
+  animation: fadeIn 1s ease;
 }
 
 h1 {
@@ -108,6 +126,7 @@ button {
   line-height: 1.7;
   max-width: 600px;
   margin: 0 auto;
+  min-height: 120px;
 }
 
 .photo-wrapper {
@@ -158,7 +177,7 @@ button {
 
   <h2>She said YES ❤️</h2>
 
-  <p>
+  <p id="loveText">
     Tiara Fathiyah Nurrahmah 💕<br><br>
 
     I don’t even know where to start.<br><br>
@@ -189,9 +208,7 @@ button {
     And if you’ll let me,
     I’d like to keep choosing you again and again.<br><br>
 
-    Always.<br><br>
-
-    P.S. I mean every word.
+    Always.
   </p>
 
 </section>
@@ -203,6 +220,7 @@ const zone = document.getElementById("zone");
 const yesBtn = document.getElementById("yesBtn");
 const noBtn = document.getElementById("noBtn");
 const result = document.getElementById("result");
+const loveText = document.getElementById("loveText");
 
 const confettiCanvas = document.getElementById("confettiCanvas");
 
@@ -244,23 +262,17 @@ function clamp(n, min, max) {
 function moveNo(x, y) {
   const z = zone.getBoundingClientRect();
   const b = noBtn.getBoundingClientRect();
-
   let dx = (b.left + b.width/2) - x;
   let dy = (b.top + b.height/2) - y;
   let mag = Math.hypot(dx, dy) || 1;
-  dx /= mag;
-  dy /= mag;
-
+  dx /= mag; dy /= mag;
   let newLeft = (b.left - z.left) + dx * 150;
   let newTop  = (b.top - z.top) + dy * 150;
-
   newLeft = clamp(newLeft, 0, z.width - b.width);
   newTop  = clamp(newTop, 0, z.height - b.height);
-
   noBtn.style.left = newLeft + "px";
   noBtn.style.top = newTop + "px";
   noBtn.style.transform = "none";
-
   growYes();
 }
 
@@ -273,11 +285,39 @@ zone.addEventListener("pointermove", e => {
   if (d < 140) moveNo(e.clientX, e.clientY);
 });
 
+function typeEffect(element, speed = 20) {
+  const html = element.innerHTML;
+  element.innerHTML = "";
+  let i = 0;
+  function typing() {
+    if (i < html.length) {
+      element.innerHTML += html.charAt(i);
+      i++;
+      setTimeout(typing, speed);
+    }
+  }
+  typing();
+}
+
 yesBtn.addEventListener("click", () => {
   zone.style.display = "none";
   result.style.display = "block";
   fireConfetti();
+  typeEffect(loveText, 18);
 });
+
+/* Floating hearts generator */
+function createHeart() {
+  const heart = document.createElement("div");
+  heart.className = "heart";
+  heart.innerHTML = "❤️";
+  heart.style.left = Math.random() * 100 + "vw";
+  heart.style.animationDuration = (5 + Math.random() * 5) + "s";
+  heart.style.fontSize = (14 + Math.random() * 20) + "px";
+  document.body.appendChild(heart);
+  setTimeout(() => heart.remove(), 9000);
+}
+setInterval(createHeart, 900);
 </script>
 
 </body>
